placeholder, blur event, wrap the option component in a div to avoid passing it listeners as props

--- a/example/public/components/App.styl
+++ b/example/public/components/App.styl
@@ -38,6 +38,10 @@ body
 
     .auto-complete
         width 500px
+        &.invalid
+            .control
+                border 1px solid red
+
 
     .copy-right 
         color #999
