--- a/src/AutoComplete.styl
+++ b/src/AutoComplete.styl
@@ -46,22 +46,10 @@
             font-size 16px
             padding 6px 10px
             position absolute
-            right 17px
+            right 0px
             top 0
             &:hover
                 color #c0392b
-
-        .arrow
-            border-color #999999 transparent transparent
-            border-style solid
-            border-width 5px
-            content " "
-            display block
-            height 0px
-            position absolute
-            right 10px
-            top 14px
-            width 0px
 
     .options
         background white
